--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
         #asciiArtCanvas {
             background-color: black;
-            width: 100%;
+            /* width: 100%; */
+            font-size: 1.5em;
+
         }
     </style>
 </head>
