--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- <script type="module" src="coignition.js"></script> -->
 
     <canvas id="asciiArtCanvas"></canvas>
+    <!-- <script type="module" src="coignition_canvas.js"></script> -->
     <script type="module" src="coignition_canvas.js"></script>
 
 
